# Thematico

./: Dockerfile  README.md  home.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: about.py  application.py
pages/utils/: __init__.py  nav.py  renderers.py  styles.py
thematico/: __init__.py  clustering.py  io.py  keywords.py  llm.py  sentiment.py
thematico/services/: pipeline.py  strategies.py
