[tool.poetry]
name = "thematico"
version = "0.1.0"
description = "Python pipeline which performs thematic analysis on a transcript"
authors = ["Andrea Toshheva"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
streamlit = ">=1.42.0,<2.0.0"
transformers = ">=4.48.3,<5.0.0"
torch = ">=2.6.0,<3.0.0"
torchvision = ">=0.21.0,<0.22.0"
torchaudio = ">=2.6.0,<3.0.0"
matplotlib = ">=3.10.0,<4.0.0"
keybert = ">=0.9.0,<0.10.0"
streamlit-option-menu = ">=0.4.0,<0.5.0"
streamlit-extras = ">=0.5.0,<0.6.0"
accelerate = ">=1.3.0,<2.0.0"
streamlit-lottie = "^0.0.5"
keyphrase-vectorizers = "^0.0.13"
ollama = "^0.4.8"
wordcloud = "^1.9.4"
spacy = "^3.8.5"
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz"}


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
